--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-
+<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"/>
 
 </head>
 <body>
@@ -30,7 +30,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 
         <span class="text-white font-medium">Rua dev 10, São Paulo</span>
 
-        <div class="bg-green-600  px-4 py-1 rounded-lg mt-5 "id="date_span">
+        <div class="bg-green-600  px-4 py-1 rounded-lg mt-5 "id="date-span">
             <span class="text-white font-medium">Seg á Dom - 18:00 as 22:00</span>
         </div>
 
@@ -108,7 +108,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
                 class="w-28 h-28 rounded-md  hover:scale-110 hover:-rotate-2 duration-300 "/>
         
             <div>
-                <p class="font-bold">Hamburguer Salad</p>
+                <p class="font-bold">Hamburguer Cheddar</p>
                 <p class="text-sm">Pão levinho de fermentação natural de Trigo, burgur 
                 160g, queijo prato e maionese da casa.</p>
 
@@ -116,7 +116,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
                     <p class="font-bold text-lg">R$ 35.90</p>    
                     <button 
                     class="bg-gray-900 px-5 rounded add-to-cart-btn"
-                    data-name="Hamburguer Salad"
+                    data-name="Hamburguer Cheddar"
                     data-price="35.90"
                     >
                         <i class="fa fa-cart-plus text-lg text-white"></i>
@@ -134,15 +134,15 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
             class="w-28 h-28 rounded-md  hover:scale-110 hover:-rotate-2 duration-300 "/>
 
             <div>
-                <p class="font-bold">Hamburguer da casa </p>
-                <p class="text-sm">Pão levinho de fermentação natural de Trigo, burgur 
+                <p class="font-bold">Hamburguer Salad </p>
+                <p class="text-sm">Pão levinho de fermentação natural de Trigo, burguer 
                 160g, queijo prato e maionese da casa.</p>
 
                 <div class="flex items-center gap-2 justify-content-between mt-3 ">
                     <p class="font-bold text-lg">R$ 30.00</p>    
                     <button 
                     class="bg-gray-900 px-5 rounded add-to-cart-btn"
-                    data-name="Hamburguer da casa"
+                    data-name="Hamburguer Salad"
                     data-price="30.00"
                     >
                         <i class="fa fa-cart-plus text-lg text-white"></i>
@@ -265,6 +265,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
         </button>
     </footer>
     <script src="script.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 
 <!--BUTTON CART FOOTER -->
 </body>
